# CppRemote

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Release.md
examples/example1/: CMakeLists.txt
examples/example1/src/: audio_player.hpp  client.cpp  remote_player.cpp  remote_player.hpp  server.cpp
examples/example2/: CMakeLists.txt
examples/example2/src/: client.cpp  person.hpp  remote_service.cpp  remote_service.hpp  server.cpp  service.hpp
examples/example3/: CMakeLists.txt
examples/example3/src/: client.cpp  info_service.cpp  info_service.hpp  model.hpp  remote_ac.cpp  remote_ac.hpp  remote_player.cpp  remote_player.hpp  server.cpp  session_info.hpp
examples/example4/: CMakeLists.txt
examples/example4/src/: client.cpp  remote_test.cpp  remote_test.hpp  rmt.cpp  rmt.hpp  server.cpp
examples/example5/: CMakeLists.txt
examples/example5/src/: client.cpp  factory_adaptor.hpp  model.hpp  remote_factory.cpp  remote_factory.hpp  remote_player.cpp  remote_player.hpp  server.cpp
examples/example6/: CMakeLists.txt
examples/example6/src/: client.cpp  remote_reader.cpp  remote_reader.hpp  remote_topic.cpp  remote_topic.hpp  server.cpp  topic.hpp
ide/cb-gcc/: remote.cbp  remote.workspace
ide/cb-gcc/example1/: Client.cbp  Server.cbp
ide/cb-gcc/example2/: Client.cbp  Server.cbp
ide/cb-gcc/example3/: Client.cbp  Example.workspace  Server.cbp
ide/cb-gcc/example4/: Client.cbp  Server.cbp
ide/cb-gcc/example5/: Client.cbp  Server.cbp
ide/cb-gcc/example6/: Client.cbp  Server.cbp
ide/cb-mingw/: remote.cbp
ide/cb-mingw/example1/: Client.cbp  Server.cbp
ide/cb-mingw/example2/: Client.cbp  Server.cbp
ide/cb-mingw/example3/: Client.cbp  Server.cbp
ide/cb-mingw/example4/: Client.cbp  Server.cbp
ide/cb-mingw/example5/: Client.cbp  Server.cbp
ide/cb-mingw/example6/: Client.cbp  Server.cbp
ide/vc12/: remote.props  remote.sln  remote.vcxproj  remote.vcxproj.filters
ide/vc12/example1/: client.vcxproj  client.vcxproj.filters  server.vcxproj  server.vcxproj.filters
ide/vc12/example2/: client.vcxproj  client.vcxproj.filters  example.sln  server.vcxproj  server.vcxproj.filters
ide/vc12/example3/: client.vcxproj  client.vcxproj.filters  server.vcxproj  server.vcxproj.filters
ide/vc12/example4/: client.vcxproj  client.vcxproj.filters  server.vcxproj  server.vcxproj.filters
ide/vc12/example5/: client.vcxproj  client.vcxproj.filters  example.props  server.vcxproj  server.vcxproj.filters
ide/vc12/example6/: client.vcxproj  client.vcxproj.filters  server.vcxproj  server.vcxproj.filters
ide/vc9/: remote.sln  remote.vcproj
ide/vc9/example1/: client.vcproj  example.sln  server.vcproj
ide/vc9/example2/: client.vcproj  example.sln  server.vcproj
ide/vc9/example3/: client.vcproj  server.vcproj
ide/vc9/example4/: client.vcproj  example.sln  server.vcproj
ide/vc9/example5/: client.vcproj  server.vcproj
ide/vc9/example6/: client.vcproj  server.vcproj
include/remote/: archive_error.hpp  array.hpp  attribute.hpp  binding.hpp  error.hpp  exception.hpp  filter_error.hpp  future.hpp  future.ipp  future_error.hpp  fwd.hpp  global.hpp  idl.hpp  io_runner.hpp  list.hpp  make_basic_binding.hpp  make_ipc_binding.hpp  make_tcp_binding.hpp  map.hpp  pool_node.hpp  pool_node.ipp  register_archive.ipp  remote_error.hpp  server.hpp  session.hpp  session.ipp  session_invoke.ipp  session_invoke_declare.ipp  set.hpp  shared_future.hpp  shared_future.ipp  shared_ptr.hpp  system_error.hpp  target_error.hpp  transport_error.hpp  utility.hpp  vector.hpp
include/remote/archive/: archives.hpp  binary_iarchive.hpp  binary_oarchive.hpp  pointer_tracker.hpp  text_iarchive.hpp  text_iarchive_impl.hpp  text_iarchive_impl.ipp  text_oarchive.hpp  xml_iarchive.hpp  xml_iarchive_impl.hpp  xml_iarchive_impl.ipp  xml_oarchive.hpp
include/remote/bindings/: acceptor.hpp  basic_acceptor.hpp  basic_binding.hpp  basic_channel.hpp  basic_serializer.hpp  binary_serializer.hpp  binding.hpp  buffer.hpp  buffer_pool.hpp  channel.hpp  fwd.hpp  ipc_transport.hpp  local_acceptor.hpp  local_endpoint.hpp  local_transport.hpp  named_pipe_acceptor.hpp  named_pipe_endpoint.hpp  named_pipe_transport.hpp  no_filter.hpp  tcp_acceptor.hpp  tcp_endpoint.hpp  tcp_transport.hpp  text_serializer.hpp  udp_acceptor.hpp  udp_endpoint.hpp  udp_transport.hpp  xml_serializer.hpp  zlib_filter.hpp
include/remote/detail/: call.hpp  comm_link.hpp  comm_link_invoke.ipp  comm_request.hpp  config.hpp  counter.hpp  direct_link.hpp  fwd.hpp  marshal.hpp  marshal_array.hpp  marshal_list.hpp  marshal_map.hpp  marshal_pair.hpp  marshal_set.hpp  marshal_vector.hpp  out_param.hpp  param.hpp  pointer_cast.hpp  pool_link.hpp  pool_node.hpp  proxy.hpp  proxy_pool.hpp  proxy_pool.ipp  result.hpp  serialize_param.hpp  serialize_primitive.hpp  server.hpp  service.hpp  service_invoke.ipp  service_pool.hpp  service_pool.ipp  stack_allocate.hpp  type_id.hpp  type_traits.hpp  utility.hpp
include/remote/idl/: class.hpp  register_class.hpp
include/remote/idl/detail/: proxy.ipp  proxy_impl.ipp  register_class.ipp  service.ipp  service_base.ipp  undefine.ipp
include/remote/serialization/system/: asio_categories.hpp  error_categories.hpp  error_code.hpp
src/remote/: exception.cpp  future_error.cpp  global.cpp  io_runner.cpp  pool_node.cpp  register_archive.cpp  server.cpp  session.cpp
src/remote/archive/: binary_iarchive.cpp  text_iarchive.cpp  xml_iarchive.cpp
src/remote/bindings/: buffer_pool.cpp  local_acceptor.cpp  local_transport.cpp  named_pipe_acceptor.cpp  named_pipe_transport.cpp  tcp_acceptor.cpp  tcp_endpoint.cpp  tcp_transport.cpp  udp_acceptor.cpp  udp_endpoint.cpp  udp_transport.cpp  zlib_filter.cpp
src/remote/detail/: call.cpp  comm_link.cpp  direct_link.cpp  pool_link.cpp  pool_node.cpp  proxy.cpp  proxy_pool.cpp  result.cpp  server.cpp  service_pool.cpp  type_id.cpp
src/remote/serialization/system/: error_categories.cpp
